Issue #1996584 by roberttstephens, RenatoG, finedesign, codycraven: max-width doesn't work on mobile devices

--- a/styles/default/colorbox_style.css
+++ b/styles/default/colorbox_style.css
@@ -69,7 +69,8 @@
   margin: auto;
   border: 0;
   display: block;
-  max-width: none;
+  max-width: 100%;
+  max-height: 100%;
 }
 .cboxIframe {
   width: 100%;
